# dns-resolver

./: .gitignore  LICENSE  README.md  build.bat  build.sh  start.bat  start.sh
backend/: go.mod  pyproject.toml
backend/api/: api.go  go.mod
backend/flask-server/: log.py  pyproject.toml  server.py
backend/log/: log.go  log.py
frontend/: index.html  script.js  style.css
scripts/: build.bat  build.sh  start.bat  start.sh
