[project]
name = "dns-cache-service"
version = "0.1.0"
description = "Flask-based caching service for DNS resolver"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
    "flask-cors>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"